[package]
name = "lime-nrai"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://limey.me/lattescript"
description = "lime-nrai, LimeyTeam's Not Really an AI software."
documentation = "https://docs.rs/lime-nrai"
readme = "README.md"
repository = "https://github.com/limeyteam/lime-nrai"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
